base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: www.medkick.air.business
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.medkick.air.business
      secretName: www-medkick-air-business-tls
